# nondominium-erp-bridge

./: .env.example  .gitignore  CLAUDE.md  LICENSE.md  README.md  flake.nix  pyproject.toml
bridge/: config.py  discovery.py  erp_mock.py  gateway_client.py  mapper.py  models.py  sync.py  use_process.py
docker/: README.md  docker-compose.yml  init-data.py
docker/addons/nondominium_connector/: __manifest__.py
docker/addons/nondominium_connector/models/: __init__.py  nondominium_config.py  product_sync.py
docker/addons/nondominium_connector/security/: ir.model.access.csv
docker/addons/nondominium_connector/views/: nondominium_config_views.xml  product_views.xml
documentation/: DOCUMENTATION_INDEX.md
documentation/archives/: erp_holochain_bridge_v1.md
documentation/implementation/: architecture.md  development-guide.md  module-reference.md
documentation/requirements/: erp_bridge_requirements.md
documentation/specifications/: erp_bridge_specifications.md
documentation/specifications/poc/: hc_http_gw_poc_spec.md
scripts/: create_test_data.py  demo_full_flow.py  setup_conductor.sh  smoke_test.py  sync_inventory.py
tests/: test_discovery.py  test_gateway_client.py  test_governance_gateway.py  test_governance_models.py  test_integration.py  test_mapper.py  test_models.py  test_sync.py  test_use_process.py
