[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nondominium-erp-bridge"
version = "0.1.0"
description = "Bridge between ERP systems and Nondominium via hc-http-gw"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-httpserver>=1.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests>=2.31",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires live Holochain conductor + hc-http-gw"]
addopts = "-m 'not integration'"
